# xkcdbot

./: .dockerignore  Dockerfile  main.py  pyproject.toml  xkcd.py
