[project]
name = "xkcdbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.9",
]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false

